--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,54 @@ img {
   display: block;
   max-width: 100%;
 }
+
+#datetime-picker {
+  width: 250px;
+  height: 35px;
+
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  /* color: rgb(47, 79, 79); */
+
+  margin-left: 50px;
+  border-radius: 5px;
+  border: 2px solid rgba(46, 47, 66, 0.4);
+}
+
+button[data-start] {
+  width: 100px;
+  height: 35px;
+  cursor: pointer;
+
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  /* color: rgb(47, 79, 79); */
+
+  border-radius: 5px;
+  border: 2px solid rgba(46, 47, 66, 0.4);
+}
+
+.timer {
+  display: flex;
+  margin-left: 50px;
+
+  margin-top: 15px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  width: 88px;
+  color: rgb(47, 79, 79);
+  font-size: 18px;
+  font-weight: 500;
+}
