--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,9 +17,10 @@ img {
   max-width: 100%;
 }
 
-#datetime-picker {
-  width: 250px;
+button[data-stop] {
+  width: 100px;
   height: 35px;
+  cursor: pointer;
 
   text-align: center;
   font-size: 16px;
@@ -28,7 +29,6 @@ img {
   letter-spacing: 0.04em;
   /* color: rgb(47, 79, 79); */
 
-  margin-left: 50px;
   border-radius: 5px;
   border: 2px solid rgba(46, 47, 66, 0.4);
 }
@@ -45,6 +45,22 @@ button[data-start] {
   letter-spacing: 0.04em;
   /* color: rgb(47, 79, 79); */
 
+  border-radius: 5px;
+  border: 2px solid rgba(46, 47, 66, 0.4);
+}
+
+#datetime-picker {
+  width: 250px;
+  height: 35px;
+
+  text-align: center;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  /* color: rgb(47, 79, 79); */
+
+  margin-left: 50px;
   border-radius: 5px;
   border: 2px solid rgba(46, 47, 66, 0.4);
 }
